--- a/lib/tasktrack3_web/templates/layout/app.html.eex
+++ b/lib/tasktrack3_web/templates/layout/app.html.eex
@@ -8,64 +8,23 @@
     <link rel="stylesheet" href="<%= Routes.static_url(@conn, "/css/app.css") %>"/>
   </head>
   <body>
-
-    <%# NAVBAR / LOGIN %>
     <div class="container">
-      <nav class="navbar navbar-expand-sm navbar-light bg-white">
-        <div class="col-4">
-          <a class="navbar-brand" href="/">Task Track</a>
-        </div>
-        <div class="col-4">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/products">TODO</a>
-            </li>
-          </ul>
-        </div>
-        <div class="col-4">
-          <%= if @current_user do %>
-            <p class="my-3">
-              User: <%= @current_user.email %> |
-              <%= link("Logout", to: Routes.session_path(@conn, :delete),
-                method: :delete) %>
-            </p>
-          <% else %>
-            <%= form_for @conn, Routes.session_path(@conn, :create),
-                     [class: "form-inline"], fn f -> %>
-              <%= text_input(f, :email, class: "form-control col-4",
-                placeholder: "email") %>
-              <%= password_input(f, :password, class: "form-control col-4",
-                placeholder: "pass") %>
-              <%= submit "Login", class: "btn btn-secondary" %>
+      <%= if get_flash(@conn, :info) || get_flash(@conn, :error) do %>
+        <div class="row">
+          <div class="col-12">
+            <%= if get_flash(@conn, :info) do %>
+              <p class="alert alert-info" role="alert">
+                <%= get_flash(@conn, :info) %></p>
             <% end %>
-          <% end %>
+            <%= if get_flash(@conn, :error) do %>
+              <p class="alert alert-danger" role="alert">
+                <%= get_flash(@conn, :error) %></p>
+            <% end %>
+          </div>
         </div>
-      </nav>
-      
-      <%# FLASHES %>
-      <div class="row">
-        <div class="col-12">
-          <%= if get_flash(@conn, :info) do %>
-            <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-          <% end %>
-          <%= if get_flash(@conn, :error) do %>
-            <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
-          <% end %>
-        </div>
-      </div>
-
-      <%# PAGE CONTENT %>
-      <div class="row">
-        <div class="col-8">
-          <%= render @view_module, @view_template, assigns %>
-        </div>
-
-      </div>
+      <% end %>
+      <%= render @view_module, @view_template, assigns %>
     </div>
-
     <script type="text/javascript" src="<%= Routes.static_url(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
