my tasks view done

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,1 +1,10 @@
 @import "~bootstrap/scss/bootstrap";
+
+.task-card {
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
+#pagetitle {
+    color: black;
+}
