--- a/lib/tasktrack3_web/templates/layout/app.html.eex
+++ b/lib/tasktrack3_web/templates/layout/app.html.eex
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Task Track · Phoenix Framework</title>
+    <link rel="stylesheet" href="<%= Routes.static_url(@conn, "/css/app.css") %>"/>
   </head>
   <body>
     <div class="container">
@@ -24,5 +25,6 @@
       <% end %>
       <%= render @view_module, @view_template, assigns %>
     </div>
+    <script type="text/javascript" src="<%= Routes.static_url(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
