--- a/lib/tasktrack3_web/templates/layout/app.html.eex
+++ b/lib/tasktrack3_web/templates/layout/app.html.eex
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Task Track · Phoenix Framework</title>
-    <link rel="stylesheet" href="https://tasks3.zombo.club/css/app.css"/>
+    <link rel="stylesheet" type="text/css" href="https://tasks3.zombo.club/css/app.css"/>
   </head>
   <body>
     <div class="container">
